// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users Table Integration Tests Count should return count of records 1`] = `
{
  "Count": 25,
  "LastEvaluatedKey": {
    "pk": "ramesh@example.com",
    "sk": "role:research-write",
  },
  "ScannedCount": 25,
}
`;

exports[`Users Table Integration Tests Count should return count of records for filter on reserved column name 1`] = `
{
  "$LastEvaluatedKeys": [
    undefined,
  ],
  "Count": 4,
  "Items": [],
  "LastEvaluatedKey": undefined,
  "ScannedCount": 85,
}
`;

exports[`Users Table Integration Tests Count should return count of records using multiple filters 1`] = `
{
  "$LastEvaluatedKeys": [
    {
      "pk": "ramesh@example.com",
      "sk": "role:research-write",
    },
    {
      "pk": "mahesh@example.com",
      "sk": "role:basic",
    },
    {
      "pk": "suresh@example.com",
      "sk": "role:reports",
    },
    undefined,
  ],
  "Count": 4,
  "Items": [],
  "LastEvaluatedKey": undefined,
  "ScannedCount": 85,
}
`;

exports[`Users Table Integration Tests Count should return count of records using raw filter 1`] = `
{
  "$LastEvaluatedKeys": [
    {
      "pk": "ramesh@example.com",
      "sk": "role:research-write",
    },
    {
      "pk": "mahesh@example.com",
      "sk": "role:basic",
    },
    {
      "pk": "suresh@example.com",
      "sk": "role:reports",
    },
    undefined,
  ],
  "Count": 4,
  "Items": [],
  "LastEvaluatedKey": undefined,
  "ScannedCount": 85,
}
`;

exports[`Users Table Integration Tests Count should return count of users 1`] = `
{
  "$LastEvaluatedKeys": [
    {
      "pk": "ramesh@example.com",
      "sk": "role:research-write",
    },
    {
      "pk": "mahesh@example.com",
      "sk": "role:basic",
    },
    {
      "pk": "suresh@example.com",
      "sk": "role:reports",
    },
    undefined,
  ],
  "Count": 24,
  "Items": [],
  "LastEvaluatedKey": undefined,
  "ScannedCount": 85,
}
`;

exports[`Users Table Integration Tests Count should return count of users of age between 30 and 40 1`] = `
{
  "$LastEvaluatedKeys": [
    {
      "pk": "ramesh@example.com",
      "sk": "role:research-write",
    },
    {
      "pk": "mahesh@example.com",
      "sk": "role:basic",
    },
    {
      "pk": "suresh@example.com",
      "sk": "role:reports",
    },
    undefined,
  ],
  "Count": 10,
  "Items": [],
  "LastEvaluatedKey": undefined,
  "ScannedCount": 85,
}
`;

exports[`Users Table Integration Tests Count should return count of users with firstName containing "a" and "i" 1`] = `
{
  "$LastEvaluatedKeys": [
    {
      "pk": "ramesh@example.com",
      "sk": "role:research-write",
    },
    {
      "pk": "mahesh@example.com",
      "sk": "role:basic",
    },
    {
      "pk": "suresh@example.com",
      "sk": "role:reports",
    },
    undefined,
  ],
  "Count": 7,
  "Items": [],
  "LastEvaluatedKey": undefined,
  "ScannedCount": 85,
}
`;

exports[`Users Table Integration Tests Count should return recursive count of all records 1`] = `
{
  "$LastEvaluatedKeys": [
    {
      "pk": "ramesh@example.com",
      "sk": "role:research-write",
    },
    {
      "pk": "mahesh@example.com",
      "sk": "role:basic",
    },
    {
      "pk": "suresh@example.com",
      "sk": "role:reports",
    },
    undefined,
  ],
  "Count": 85,
  "Items": [],
  "LastEvaluatedKey": undefined,
  "ScannedCount": 85,
}
`;

exports[`Users Table Integration Tests Query mahesh@example.com should fetch addresses between 2 and 5 1`] = `
[
  {
    "city": "Los Angeles",
    "country": "USA",
    "pk": "mahesh@example.com",
    "sk": "address:2",
    "state": "CA",
    "street": "456 Maple Ave",
    "zip": "90001",
  },
  {
    "city": "New York",
    "country": "USA",
    "pk": "mahesh@example.com",
    "sk": "address:3",
    "state": "NY",
    "street": "789 Broadway",
    "zip": "10013",
  },
  {
    "city": "Chicago",
    "country": "USA",
    "pk": "mahesh@example.com",
    "sk": "address:4",
    "state": "IL",
    "street": "321 Lake St",
    "zip": "60601",
  },
  {
    "city": "Seattle",
    "country": "USA",
    "pk": "mahesh@example.com",
    "sk": "address:5",
    "state": "WA",
    "street": "654 Hill Rd",
    "zip": "98101",
  },
]
`;

exports[`Users Table Integration Tests Query mahesh@example.com should fetch addresses in CA 1`] = `
[
  {
    "city": "San Francisco",
    "country": "USA",
    "pk": "mahesh@example.com",
    "sk": "address:1",
    "state": "CA",
    "street": "789 Oak St",
    "zip": "94105",
  },
  {
    "city": "Los Angeles",
    "country": "USA",
    "pk": "mahesh@example.com",
    "sk": "address:2",
    "state": "CA",
    "street": "456 Maple Ave",
    "zip": "90001",
  },
]
`;

exports[`Users Table Integration Tests Query mahesh@example.com should fetch all wishlist items for this user 1`] = `
[
  {
    "created_at": "2024-04-01T10:30:00.000Z",
    "items": [
      {
        "id": "home-001",
        "name": "Smart Refrigerator",
        "price": 2799.99,
        "quantity": 1,
        "specs": {
          "brand": "Samsung",
          "color": "Stainless Steel",
          "model": "Family Hub",
        },
      },
      {
        "id": "home-002",
        "name": "Robot Vacuum",
        "price": 599.99,
        "quantity": 1,
        "specs": {
          "brand": "Roomba",
          "features": [
            "Self-emptying",
            "Smart mapping",
          ],
          "model": "j9+",
        },
      },
      {
        "id": "home-003",
        "name": "Smart Thermostat",
        "price": 249.99,
        "quantity": 2,
        "specs": {
          "brand": "Nest",
          "color": "Snow",
          "generation": "4th",
        },
      },
      {
        "id": "home-004",
        "name": "Air Purifier",
        "price": 399.99,
        "quantity": 1,
        "specs": {
          "brand": "Dyson",
          "coverage": "800 sq ft",
          "filters": [
            "HEPA",
            "Carbon",
          ],
        },
      },
    ],
    "name": "Home Improvement",
    "pk": "mahesh@example.com",
    "sk": "wishlist:home",
    "total": 4249.95,
  },
  {
    "created_at": "2024-03-15T08:00:00.000Z",
    "items": [
      {
        "id": "tech-001",
        "name": "MacBook Pro 16"",
        "price": 2499.99,
        "quantity": 1,
        "specs": {
          "processor": "M3 Pro",
          "ram": "32GB",
          "storage": "1TB",
        },
      },
      {
        "id": "tech-002",
        "name": "Sony WH-1000XM5",
        "price": 399.99,
        "quantity": 1,
        "specs": {
          "batteryLife": "30 hours",
          "color": "Black",
          "type": "Wireless Headphones",
        },
      },
      {
        "id": "tech-003",
        "name": "iPad Pro 12.9"",
        "price": 1099.99,
        "quantity": 1,
        "specs": {
          "color": "Space Gray",
          "connectivity": "WiFi + Cellular",
          "storage": "256GB",
        },
      },
    ],
    "name": "Tech Gadgets",
    "pk": "mahesh@example.com",
    "sk": "wishlist:tech",
    "total": 3999.97,
  },
]
`;

exports[`Users Table Integration Tests Query mahesh@example.com should fetch orders greater than 2024-02 and less than 2024-04 1`] = `
[
  {
    "discount": 0,
    "items": [
      "Monitor",
      "Webcam",
    ],
    "o_id": "f3e8d1",
    "orderDate": "2024-02-03T15:45:00.000Z",
    "pk": "mahesh@example.com",
    "sk": "order:2024-02:f3e8d1",
    "status": "delivered",
    "subtotal": 599.98,
    "tax": 48,
    "total": 647.98,
  },
  {
    "discount": 45,
    "items": [
      "Printer",
      "Paper",
      "Ink Cartridges",
    ],
    "o_id": "k5m7n9",
    "orderDate": "2024-03-21T09:15:00.000Z",
    "pk": "mahesh@example.com",
    "sk": "order:2024-03:k5m7n9",
    "status": "processing",
    "subtotal": 449.97,
    "tax": 32.4,
    "total": 437.37,
  },
]
`;

exports[`Users Table Integration Tests Query mahesh@example.com should fetch orders where size of items is 3 1`] = `
[
  {
    "discount": 129.99,
    "items": [
      "Laptop",
      "Mouse",
      "Keyboard",
    ],
    "o_id": "a7b9c2",
    "orderDate": "2024-01-15T10:30:00.000Z",
    "pk": "mahesh@example.com",
    "sk": "order:2024-01:a7b9c2",
    "status": "delivered",
    "subtotal": 1299.97,
    "tax": 93.6,
    "total": 1263.58,
  },
  {
    "discount": 45,
    "items": [
      "Printer",
      "Paper",
      "Ink Cartridges",
    ],
    "o_id": "k5m7n9",
    "orderDate": "2024-03-21T09:15:00.000Z",
    "pk": "mahesh@example.com",
    "sk": "order:2024-03:k5m7n9",
    "status": "processing",
    "subtotal": 449.97,
    "tax": 32.4,
    "total": 437.37,
  },
]
`;

exports[`Users Table Integration Tests Query mahesh@example.com should fetch wishlist where size of items is 3 1`] = `
[
  {
    "created_at": "2024-03-15T08:00:00.000Z",
    "items": [
      {
        "id": "tech-001",
        "name": "MacBook Pro 16"",
        "price": 2499.99,
        "quantity": 1,
        "specs": {
          "processor": "M3 Pro",
          "ram": "32GB",
          "storage": "1TB",
        },
      },
      {
        "id": "tech-002",
        "name": "Sony WH-1000XM5",
        "price": 399.99,
        "quantity": 1,
        "specs": {
          "batteryLife": "30 hours",
          "color": "Black",
          "type": "Wireless Headphones",
        },
      },
      {
        "id": "tech-003",
        "name": "iPad Pro 12.9"",
        "price": 1099.99,
        "quantity": 1,
        "specs": {
          "color": "Space Gray",
          "connectivity": "WiFi + Cellular",
          "storage": "256GB",
        },
      },
    ],
    "name": "Tech Gadgets",
    "pk": "mahesh@example.com",
    "sk": "wishlist:tech",
    "total": 3999.97,
  },
]
`;

exports[`Users Table Integration Tests Query mahesh@example.com should fetch wishlist where total less than 4000 1`] = `
[
  {
    "created_at": "2024-03-15T08:00:00.000Z",
    "items": [
      {
        "id": "tech-001",
        "name": "MacBook Pro 16"",
        "price": 2499.99,
        "quantity": 1,
        "specs": {
          "processor": "M3 Pro",
          "ram": "32GB",
          "storage": "1TB",
        },
      },
      {
        "id": "tech-002",
        "name": "Sony WH-1000XM5",
        "price": 399.99,
        "quantity": 1,
        "specs": {
          "batteryLife": "30 hours",
          "color": "Black",
          "type": "Wireless Headphones",
        },
      },
      {
        "id": "tech-003",
        "name": "iPad Pro 12.9"",
        "price": 1099.99,
        "quantity": 1,
        "specs": {
          "color": "Space Gray",
          "connectivity": "WiFi + Cellular",
          "storage": "256GB",
        },
      },
    ],
    "name": "Tech Gadgets",
    "pk": "mahesh@example.com",
    "sk": "wishlist:tech",
    "total": 3999.97,
  },
]
`;

exports[`Users Table Integration Tests Query mahesh@example.com should work with multiple filters on same attribute 1`] = `
[
  {
    "city": "Los Angeles",
    "country": "USA",
    "pk": "mahesh@example.com",
    "sk": "address:2",
    "state": "CA",
    "street": "456 Maple Ave",
    "zip": "90001",
  },
]
`;

exports[`Users Table Integration Tests Query ramesh@example.com: Pagination should fetch fetch 3 records at a time 1`] = `
[
  {
    "name": "admin",
    "pk": "ramesh@example.com",
    "privilege": "admin",
    "sk": "role:admin",
  },
  {
    "name": "analytics",
    "pk": "ramesh@example.com",
    "privilege": "analytics-read",
    "sk": "role:analytics",
  },
  {
    "name": "analytics-write",
    "pk": "ramesh@example.com",
    "privilege": "analytics-write",
    "sk": "role:analytics-write",
  },
  {
    "name": "basic",
    "pk": "ramesh@example.com",
    "privilege": "read-basic-app",
    "sk": "role:basic",
  },
  {
    "name": "compliance",
    "pk": "ramesh@example.com",
    "privilege": "compliance-read",
    "sk": "role:compliance",
  },
  {
    "name": "compliance-write",
    "pk": "ramesh@example.com",
    "privilege": "compliance-write",
    "sk": "role:compliance-write",
  },
  {
    "name": "engineering",
    "pk": "ramesh@example.com",
    "privilege": "engineering-read",
    "sk": "role:engineering",
  },
  {
    "name": "engineering-write",
    "pk": "ramesh@example.com",
    "privilege": "engineering-write",
    "sk": "role:engineering-write",
  },
  {
    "name": "finance",
    "pk": "ramesh@example.com",
    "privilege": "finance-read",
    "sk": "role:finance",
  },
  {
    "name": "finance-write",
    "pk": "ramesh@example.com",
    "privilege": "finance-write",
    "sk": "role:finance-write",
  },
  {
    "name": "hr",
    "pk": "ramesh@example.com",
    "privilege": "hr-read",
    "sk": "role:hr",
  },
  {
    "name": "hr-write",
    "pk": "ramesh@example.com",
    "privilege": "hr-write",
    "sk": "role:hr-write",
  },
  {
    "name": "legal",
    "pk": "ramesh@example.com",
    "privilege": "legal-read",
    "sk": "role:legal",
  },
  {
    "name": "legal-write",
    "pk": "ramesh@example.com",
    "privilege": "legal-write",
    "sk": "role:legal-write",
  },
  {
    "name": "marketing",
    "pk": "ramesh@example.com",
    "privilege": "marketing-read",
    "sk": "role:marketing",
  },
  {
    "name": "marketing-write",
    "pk": "ramesh@example.com",
    "privilege": "marketing-write",
    "sk": "role:marketing-write",
  },
  {
    "name": "operations",
    "pk": "ramesh@example.com",
    "privilege": "operations-read",
    "sk": "role:operations",
  },
  {
    "name": "operations-write",
    "pk": "ramesh@example.com",
    "privilege": "operations-write",
    "sk": "role:operations-write",
  },
  {
    "name": "product",
    "pk": "ramesh@example.com",
    "privilege": "product-read",
    "sk": "role:product",
  },
  {
    "name": "product-write",
    "pk": "ramesh@example.com",
    "privilege": "product-write",
    "sk": "role:product-write",
  },
  {
    "name": "quality",
    "pk": "ramesh@example.com",
    "privilege": "quality-read",
    "sk": "role:quality",
  },
  {
    "name": "quality-write",
    "pk": "ramesh@example.com",
    "privilege": "quality-write",
    "sk": "role:quality-write",
  },
  {
    "name": "reports",
    "pk": "ramesh@example.com",
    "privilege": "reports",
    "sk": "role:reports",
  },
  {
    "name": "research",
    "pk": "ramesh@example.com",
    "privilege": "research-read",
    "sk": "role:research",
  },
  {
    "name": "research-write",
    "pk": "ramesh@example.com",
    "privilege": "research-write",
    "sk": "role:research-write",
  },
  {
    "name": "sales",
    "pk": "ramesh@example.com",
    "privilege": "sales-read",
    "sk": "role:sales",
  },
  {
    "name": "sales-write",
    "pk": "ramesh@example.com",
    "privilege": "sales-write",
    "sk": "role:sales-write",
  },
  {
    "name": "security",
    "pk": "ramesh@example.com",
    "privilege": "security-read",
    "sk": "role:security",
  },
  {
    "name": "security-write",
    "pk": "ramesh@example.com",
    "privilege": "security-write",
    "sk": "role:security-write",
  },
  {
    "name": "super-admin",
    "pk": "ramesh@example.com",
    "privilege": "super-admin",
    "sk": "role:super-admin",
  },
  {
    "name": "support",
    "pk": "ramesh@example.com",
    "privilege": "support-read",
    "sk": "role:support",
  },
  {
    "name": "support-write",
    "pk": "ramesh@example.com",
    "privilege": "support-write",
    "sk": "role:support-write",
  },
  {
    "address": "101 Pine St",
    "age": 35,
    "favCar": "Honda",
    "favColor": "yellow",
    "favStar": "Alpha Centauri",
    "firstName": "ramesh",
    "lastName": "yadav",
    "phone": "123-456-7890",
    "pk": "ramesh@example.com",
    "sk": "user",
  },
]
`;

exports[`Users Table Integration Tests Query ramesh@example.com: Pagination should fetch first page of records, returning a last evaluated key 1`] = `
{
  "Count": 25,
  "Items": [
    {
      "name": "admin",
      "pk": "ramesh@example.com",
      "privilege": "admin",
      "sk": "role:admin",
    },
    {
      "name": "analytics",
      "pk": "ramesh@example.com",
      "privilege": "analytics-read",
      "sk": "role:analytics",
    },
    {
      "name": "analytics-write",
      "pk": "ramesh@example.com",
      "privilege": "analytics-write",
      "sk": "role:analytics-write",
    },
    {
      "name": "basic",
      "pk": "ramesh@example.com",
      "privilege": "read-basic-app",
      "sk": "role:basic",
    },
    {
      "name": "compliance",
      "pk": "ramesh@example.com",
      "privilege": "compliance-read",
      "sk": "role:compliance",
    },
    {
      "name": "compliance-write",
      "pk": "ramesh@example.com",
      "privilege": "compliance-write",
      "sk": "role:compliance-write",
    },
    {
      "name": "engineering",
      "pk": "ramesh@example.com",
      "privilege": "engineering-read",
      "sk": "role:engineering",
    },
    {
      "name": "engineering-write",
      "pk": "ramesh@example.com",
      "privilege": "engineering-write",
      "sk": "role:engineering-write",
    },
    {
      "name": "finance",
      "pk": "ramesh@example.com",
      "privilege": "finance-read",
      "sk": "role:finance",
    },
    {
      "name": "finance-write",
      "pk": "ramesh@example.com",
      "privilege": "finance-write",
      "sk": "role:finance-write",
    },
    {
      "name": "hr",
      "pk": "ramesh@example.com",
      "privilege": "hr-read",
      "sk": "role:hr",
    },
    {
      "name": "hr-write",
      "pk": "ramesh@example.com",
      "privilege": "hr-write",
      "sk": "role:hr-write",
    },
    {
      "name": "legal",
      "pk": "ramesh@example.com",
      "privilege": "legal-read",
      "sk": "role:legal",
    },
    {
      "name": "legal-write",
      "pk": "ramesh@example.com",
      "privilege": "legal-write",
      "sk": "role:legal-write",
    },
    {
      "name": "marketing",
      "pk": "ramesh@example.com",
      "privilege": "marketing-read",
      "sk": "role:marketing",
    },
    {
      "name": "marketing-write",
      "pk": "ramesh@example.com",
      "privilege": "marketing-write",
      "sk": "role:marketing-write",
    },
    {
      "name": "operations",
      "pk": "ramesh@example.com",
      "privilege": "operations-read",
      "sk": "role:operations",
    },
    {
      "name": "operations-write",
      "pk": "ramesh@example.com",
      "privilege": "operations-write",
      "sk": "role:operations-write",
    },
    {
      "name": "product",
      "pk": "ramesh@example.com",
      "privilege": "product-read",
      "sk": "role:product",
    },
    {
      "name": "product-write",
      "pk": "ramesh@example.com",
      "privilege": "product-write",
      "sk": "role:product-write",
    },
    {
      "name": "quality",
      "pk": "ramesh@example.com",
      "privilege": "quality-read",
      "sk": "role:quality",
    },
    {
      "name": "quality-write",
      "pk": "ramesh@example.com",
      "privilege": "quality-write",
      "sk": "role:quality-write",
    },
    {
      "name": "reports",
      "pk": "ramesh@example.com",
      "privilege": "reports",
      "sk": "role:reports",
    },
    {
      "name": "research",
      "pk": "ramesh@example.com",
      "privilege": "research-read",
      "sk": "role:research",
    },
    {
      "name": "research-write",
      "pk": "ramesh@example.com",
      "privilege": "research-write",
      "sk": "role:research-write",
    },
  ],
  "LastEvaluatedKey": {
    "pk": "ramesh@example.com",
    "sk": "role:research-write",
  },
  "ScannedCount": 25,
}
`;

exports[`Users Table Integration Tests Query ramesh@example.com: Pagination should fetch second page of records, using the last evaluated key from the first page 1`] = `
{
  "Count": 8,
  "Items": [
    {
      "name": "sales",
      "pk": "ramesh@example.com",
      "privilege": "sales-read",
      "sk": "role:sales",
    },
    {
      "name": "sales-write",
      "pk": "ramesh@example.com",
      "privilege": "sales-write",
      "sk": "role:sales-write",
    },
    {
      "name": "security",
      "pk": "ramesh@example.com",
      "privilege": "security-read",
      "sk": "role:security",
    },
    {
      "name": "security-write",
      "pk": "ramesh@example.com",
      "privilege": "security-write",
      "sk": "role:security-write",
    },
    {
      "name": "super-admin",
      "pk": "ramesh@example.com",
      "privilege": "super-admin",
      "sk": "role:super-admin",
    },
    {
      "name": "support",
      "pk": "ramesh@example.com",
      "privilege": "support-read",
      "sk": "role:support",
    },
    {
      "name": "support-write",
      "pk": "ramesh@example.com",
      "privilege": "support-write",
      "sk": "role:support-write",
    },
    {
      "address": "101 Pine St",
      "age": 35,
      "favCar": "Honda",
      "favColor": "yellow",
      "favStar": "Alpha Centauri",
      "firstName": "ramesh",
      "lastName": "yadav",
      "phone": "123-456-7890",
      "pk": "ramesh@example.com",
      "sk": "user",
    },
  ],
  "ScannedCount": 8,
}
`;

exports[`Users Table Integration Tests Query suresh@example.com should fetch all roles for this user 1`] = `
[
  {
    "name": "admin",
    "pk": "suresh@example.com",
    "privilege": "admin-access",
    "sk": "role:admin",
  },
  {
    "name": "basic",
    "pk": "suresh@example.com",
    "privilege": "read-basic-app",
    "sk": "role:basic",
  },
  {
    "deleted_at": "2024-01-20T00:00:00.000Z",
    "name": "development",
    "pk": "suresh@example.com",
    "privilege": "development-access",
    "sk": "role:development",
  },
  {
    "name": "finance",
    "pk": "suresh@example.com",
    "privilege": "finance-access",
    "sk": "role:finance",
  },
  {
    "name": "hr",
    "pk": "suresh@example.com",
    "privilege": "hr-access",
    "sk": "role:hr",
  },
  {
    "name": "it",
    "pk": "suresh@example.com",
    "privilege": "it-access",
    "sk": "role:it",
  },
  {
    "name": "marketing",
    "pk": "suresh@example.com",
    "privilege": "marketing-access",
    "sk": "role:marketing",
  },
  {
    "name": "operations",
    "pk": "suresh@example.com",
    "privilege": "operations-access",
    "sk": "role:operations",
  },
  {
    "deleted_at": "2024-04-01T00:00:00.000Z",
    "name": "qa",
    "pk": "suresh@example.com",
    "privilege": "qa-access",
    "sk": "role:qa",
  },
  {
    "name": "reports",
    "pk": "suresh@example.com",
    "privilege": "reports",
    "sk": "role:reports",
  },
  {
    "deleted_at": "2024-02-01T00:00:00.000Z",
    "name": "sales",
    "pk": "suresh@example.com",
    "privilege": "sales-access",
    "sk": "role:sales",
  },
  {
    "deleted_at": "2024-03-15T00:00:00.000Z",
    "name": "support",
    "pk": "suresh@example.com",
    "privilege": "support-access",
    "sk": "role:support",
  },
]
`;

exports[`Users Table Integration Tests Query suresh@example.com should fetch un-deleted roles for this user 1`] = `
[
  {
    "name": "admin",
    "pk": "suresh@example.com",
    "privilege": "admin-access",
    "sk": "role:admin",
  },
  {
    "name": "basic",
    "pk": "suresh@example.com",
    "privilege": "read-basic-app",
    "sk": "role:basic",
  },
  {
    "name": "finance",
    "pk": "suresh@example.com",
    "privilege": "finance-access",
    "sk": "role:finance",
  },
  {
    "name": "hr",
    "pk": "suresh@example.com",
    "privilege": "hr-access",
    "sk": "role:hr",
  },
  {
    "name": "it",
    "pk": "suresh@example.com",
    "privilege": "it-access",
    "sk": "role:it",
  },
  {
    "name": "marketing",
    "pk": "suresh@example.com",
    "privilege": "marketing-access",
    "sk": "role:marketing",
  },
  {
    "name": "operations",
    "pk": "suresh@example.com",
    "privilege": "operations-access",
    "sk": "role:operations",
  },
  {
    "name": "reports",
    "pk": "suresh@example.com",
    "privilege": "reports",
    "sk": "role:reports",
  },
]
`;

exports[`Users Table Integration Tests Scan should return all records 1`] = `
[
  {
    "name": "admin",
    "pk": "ramesh@example.com",
    "privilege": "admin",
    "sk": "role:admin",
  },
  {
    "name": "analytics",
    "pk": "ramesh@example.com",
    "privilege": "analytics-read",
    "sk": "role:analytics",
  },
  {
    "name": "analytics-write",
    "pk": "ramesh@example.com",
    "privilege": "analytics-write",
    "sk": "role:analytics-write",
  },
  {
    "name": "basic",
    "pk": "ramesh@example.com",
    "privilege": "read-basic-app",
    "sk": "role:basic",
  },
  {
    "name": "compliance",
    "pk": "ramesh@example.com",
    "privilege": "compliance-read",
    "sk": "role:compliance",
  },
  {
    "name": "compliance-write",
    "pk": "ramesh@example.com",
    "privilege": "compliance-write",
    "sk": "role:compliance-write",
  },
  {
    "name": "engineering",
    "pk": "ramesh@example.com",
    "privilege": "engineering-read",
    "sk": "role:engineering",
  },
  {
    "name": "engineering-write",
    "pk": "ramesh@example.com",
    "privilege": "engineering-write",
    "sk": "role:engineering-write",
  },
  {
    "name": "finance",
    "pk": "ramesh@example.com",
    "privilege": "finance-read",
    "sk": "role:finance",
  },
  {
    "name": "finance-write",
    "pk": "ramesh@example.com",
    "privilege": "finance-write",
    "sk": "role:finance-write",
  },
  {
    "name": "hr",
    "pk": "ramesh@example.com",
    "privilege": "hr-read",
    "sk": "role:hr",
  },
  {
    "name": "hr-write",
    "pk": "ramesh@example.com",
    "privilege": "hr-write",
    "sk": "role:hr-write",
  },
  {
    "name": "legal",
    "pk": "ramesh@example.com",
    "privilege": "legal-read",
    "sk": "role:legal",
  },
  {
    "name": "legal-write",
    "pk": "ramesh@example.com",
    "privilege": "legal-write",
    "sk": "role:legal-write",
  },
  {
    "name": "marketing",
    "pk": "ramesh@example.com",
    "privilege": "marketing-read",
    "sk": "role:marketing",
  },
  {
    "name": "marketing-write",
    "pk": "ramesh@example.com",
    "privilege": "marketing-write",
    "sk": "role:marketing-write",
  },
  {
    "name": "operations",
    "pk": "ramesh@example.com",
    "privilege": "operations-read",
    "sk": "role:operations",
  },
  {
    "name": "operations-write",
    "pk": "ramesh@example.com",
    "privilege": "operations-write",
    "sk": "role:operations-write",
  },
  {
    "name": "product",
    "pk": "ramesh@example.com",
    "privilege": "product-read",
    "sk": "role:product",
  },
  {
    "name": "product-write",
    "pk": "ramesh@example.com",
    "privilege": "product-write",
    "sk": "role:product-write",
  },
  {
    "name": "quality",
    "pk": "ramesh@example.com",
    "privilege": "quality-read",
    "sk": "role:quality",
  },
  {
    "name": "quality-write",
    "pk": "ramesh@example.com",
    "privilege": "quality-write",
    "sk": "role:quality-write",
  },
  {
    "name": "reports",
    "pk": "ramesh@example.com",
    "privilege": "reports",
    "sk": "role:reports",
  },
  {
    "name": "research",
    "pk": "ramesh@example.com",
    "privilege": "research-read",
    "sk": "role:research",
  },
  {
    "name": "research-write",
    "pk": "ramesh@example.com",
    "privilege": "research-write",
    "sk": "role:research-write",
  },
]
`;

exports[`Users Table Integration Tests Scan should return all records with specific columns 1`] = `
[
  {
    "pk": "ramesh@example.com",
    "sk": "role:admin",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:analytics",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:analytics-write",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:basic",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:compliance",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:compliance-write",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:engineering",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:engineering-write",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:finance",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:finance-write",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:hr",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:hr-write",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:legal",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:legal-write",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:marketing",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:marketing-write",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:operations",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:operations-write",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:product",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:product-write",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:quality",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:quality-write",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:reports",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:research",
  },
  {
    "pk": "ramesh@example.com",
    "sk": "role:research-write",
  },
]
`;

exports[`Users Table Integration Tests Scan should return all user records 1`] = `
[
  {
    "address": "101 Pine St",
    "age": 35,
    "favCar": "Honda",
    "favColor": "yellow",
    "favStar": "Alpha Centauri",
    "firstName": "ramesh",
    "lastName": "yadav",
    "phone": "123-456-7890",
    "pk": "ramesh@example.com",
    "sk": "user",
  },
  {
    "address": "111 Oak St",
    "age": 27,
    "favCar": "Bentley",
    "favColor": "navy",
    "favStar": "Procyon",
    "firstName": "anjali",
    "lastName": "mehta",
    "phone": "123-456-7899",
    "pk": "anjali@example.com",
    "sk": "user",
  },
  {
    "address": "606 Ash St",
    "age": 29,
    "favCar": "Volvo",
    "favColor": "white",
    "favStar": "Sirius",
    "firstName": "deepa",
    "lastName": "verma",
    "phone": "123-456-7895",
    "pk": "deepa@example.com",
    "sk": "user",
  },
  {
    "address": "123 Main St",
    "age": 30,
    "favCar": "Tesla",
    "favColor": "blue",
    "favStar": "Polaris",
    "firstName": "ramana",
    "lastName": "reddy",
    "phone": "123-456-7890",
    "pk": "ramana@example.com",
    "sk": "user",
  },
  {
    "address": "789 Oak St",
    "age": 40,
    "favCar": "Toyota",
    "favColor": "green",
    "favStar": "Betelgeuse",
    "firstName": "mahesh",
    "lastName": "babu",
    "phone": "123-456-7890",
    "pk": "mahesh@example.com",
    "sk": "user",
  },
  {
    "address": "222 Elm St",
    "age": 44,
    "favCar": "Ferrari",
    "favColor": "teal",
    "favStar": "Sun",
    "firstName": "kiran",
    "lastName": "desai",
    "phone": "123-456-7810",
    "pk": "kiran@example.com",
    "sk": "user",
  },
  {
    "address": "505 Walnut St",
    "age": 38,
    "favCar": "Lexus",
    "favColor": "black",
    "favStar": "Polaris",
    "firstName": "amit",
    "lastName": "singh",
    "phone": "123-456-7894",
    "pk": "amit@example.com",
    "sk": "user",
  },
  {
    "address": "444 Cedar St",
    "age": 39,
    "favCar": "Range Rover",
    "favColor": "violet",
    "favStar": "Sirius",
    "firstName": "meera",
    "lastName": "roy",
    "phone": "123-456-7812",
    "pk": "meera@example.com",
    "sk": "user",
  },
  {
    "address": "808 Fir St",
    "age": 31,
    "favCar": "Porsche",
    "favColor": "brown",
    "favStar": "Alpha Centauri",
    "firstName": "pooja",
    "lastName": "joshi",
    "phone": "123-456-7897",
    "pk": "pooja@example.com",
    "sk": "user",
  },
  {
    "address": "555 Birch St",
    "age": 34,
    "favCar": "Rolls Royce",
    "favColor": "indigo",
    "favStar": "Betelgeuse",
    "firstName": "arun",
    "lastName": "nair",
    "phone": "123-456-7813",
    "pk": "arun@example.com",
    "sk": "user",
  },
  {
    "address": "999 Fir St",
    "age": 43,
    "favCar": "Infiniti",
    "favColor": "bronze",
    "favStar": "Sun",
    "firstName": "vivek",
    "lastName": "sinha",
    "phone": "123-456-7817",
    "pk": "vivek@example.com",
    "sk": "user",
  },
  {
    "address": "888 Spruce St",
    "age": 30,
    "favCar": "Aston Martin",
    "favColor": "silver",
    "favStar": "Procyon",
    "firstName": "ritu",
    "lastName": "das",
    "phone": "123-456-7816",
    "pk": "ritu@example.com",
    "sk": "user",
  },
  {
    "address": "777 Ash St",
    "age": 37,
    "favCar": "Bugatti",
    "favColor": "gold",
    "favStar": "Vega Prime",
    "firstName": "sanjay",
    "lastName": "iyer",
    "phone": "123-456-7815",
    "pk": "sanjay@example.com",
    "sk": "user",
  },
  {
    "address": "404 Birch St",
    "age": 32,
    "favCar": "Mercedes",
    "favColor": "pink",
    "favStar": "Sun",
    "firstName": "neha",
    "lastName": "gupta",
    "phone": "123-456-7893",
    "pk": "neha@example.com",
    "sk": "user",
  },
  {
    "address": "303 Maple St",
    "age": 45,
    "favCar": "Audi",
    "favColor": "orange",
    "favStar": "Procyon",
    "firstName": "raj",
    "lastName": "patel",
    "phone": "123-456-7892",
    "pk": "raj@example.com",
    "sk": "user",
  },
  {
    "address": "707 Spruce St",
    "age": 42,
    "favCar": "Jaguar",
    "favColor": "gray",
    "favStar": "Betelgeuse",
    "firstName": "vikram",
    "lastName": "malhotra",
    "phone": "123-456-7896",
    "pk": "vikram@example.com",
    "sk": "user",
  },
  {
    "address": "456 Elm St",
    "age": 25,
    "favCar": "Ford",
    "favColor": "red",
    "favStar": "Sirius",
    "firstName": "suresh",
    "lastName": "kumar",
    "phone": "123-456-7890",
    "pk": "suresh@example.com",
    "sk": "user",
  },
  {
    "address": "202 Cedar St",
    "age": 28,
    "favCar": "BMW",
    "favColor": "purple",
    "favStar": "Vega Prime",
    "firstName": "priya",
    "lastName": "sharma",
    "phone": "123-456-7891",
    "pk": "priya@example.com",
    "sk": "user",
  },
  {
    "address": "131 Oak St",
    "age": 40,
    "favCar": "Chrysler",
    "favColor": "cyan",
    "favStar": "Sirius",
    "firstName": "rohit",
    "lastName": "sen",
    "phone": "123-456-7819",
    "pk": "rohit@example.com",
    "sk": "user",
  },
  {
    "address": "666 Walnut St",
    "age": 41,
    "favCar": "McLaren",
    "favColor": "turquoise",
    "favStar": "Alpha Centauri",
    "firstName": "divya",
    "lastName": "menon",
    "phone": "123-456-7814",
    "pk": "divya@example.com",
    "sk": "user",
  },
  {
    "address": "121 Pine St",
    "age": 35,
    "favCar": "Acura",
    "favColor": "magenta",
    "favStar": "Polaris",
    "firstName": "kavita",
    "lastName": "bose",
    "phone": "123-456-7818",
    "pk": "kavita@example.com",
    "sk": "user",
  },
  {
    "address": "909 Pine St",
    "age": 36,
    "favCar": "Maserati",
    "favColor": "maroon",
    "favStar": "Vega Prime",
    "firstName": "rahul",
    "lastName": "shah",
    "phone": "123-456-7898",
    "pk": "rahul@example.com",
    "sk": "user",
  },
  {
    "address": "333 Maple St",
    "age": 33,
    "favCar": "Lamborghini",
    "favColor": "crimson",
    "favStar": "Polaris",
    "firstName": "arjun",
    "lastName": "kapoor",
    "phone": "123-456-7811",
    "pk": "arjun@example.com",
    "sk": "user",
  },
  {
    "address": "141 Elm St",
    "age": 26,
    "favCar": "Cadillac",
    "favColor": "lime",
    "favStar": "Betelgeuse",
    "firstName": "maya",
    "lastName": "rao",
    "phone": "123-456-7820",
    "pk": "maya@example.com",
    "sk": "user",
  },
]
`;

exports[`Users Table Integration Tests Scan should return all user records of age between 30 and 40 1`] = `
[
  {
    "age": 35,
    "pk": "ramesh@example.com",
    "sk": "user",
  },
  {
    "age": 38,
    "pk": "amit@example.com",
    "sk": "user",
  },
  {
    "age": 39,
    "pk": "meera@example.com",
    "sk": "user",
  },
  {
    "age": 31,
    "pk": "pooja@example.com",
    "sk": "user",
  },
  {
    "age": 34,
    "pk": "arun@example.com",
    "sk": "user",
  },
  {
    "age": 37,
    "pk": "sanjay@example.com",
    "sk": "user",
  },
  {
    "age": 32,
    "pk": "neha@example.com",
    "sk": "user",
  },
  {
    "age": 35,
    "pk": "kavita@example.com",
    "sk": "user",
  },
  {
    "age": 36,
    "pk": "rahul@example.com",
    "sk": "user",
  },
  {
    "age": 33,
    "pk": "arjun@example.com",
    "sk": "user",
  },
]
`;

exports[`Users Table Integration Tests Scan should return all user records with firstName containing "a" and "i" 1`] = `
[
  {
    "firstName": "anjali",
    "pk": "anjali@example.com",
    "sk": "user",
  },
  {
    "firstName": "kiran",
    "pk": "kiran@example.com",
    "sk": "user",
  },
  {
    "firstName": "amit",
    "pk": "amit@example.com",
    "sk": "user",
  },
  {
    "firstName": "vikram",
    "pk": "vikram@example.com",
    "sk": "user",
  },
  {
    "firstName": "priya",
    "pk": "priya@example.com",
    "sk": "user",
  },
  {
    "firstName": "divya",
    "pk": "divya@example.com",
    "sk": "user",
  },
  {
    "firstName": "kavita",
    "pk": "kavita@example.com",
    "sk": "user",
  },
]
`;

exports[`Users Table Integration Tests Scan should return records for reserved column names 1`] = `
[
  {
    "name": "admin",
  },
  {
    "name": "analytics",
  },
  {
    "name": "analytics-write",
  },
]
`;

exports[`Users Table Integration Tests Scan should return records for reserved column names and filter on same column 1`] = `
[
  {
    "name": "basic",
    "pk": "ramesh@example.com",
    "privilege": "read-basic-app",
    "sk": "role:basic",
  },
  {
    "name": "basic",
    "pk": "ramana@example.com",
    "privilege": "read-basic-app",
    "sk": "role:basic",
  },
  {
    "name": "basic",
    "pk": "mahesh@example.com",
    "privilege": "read-basic-app",
    "sk": "role:basic",
  },
  {
    "name": "basic",
    "pk": "suresh@example.com",
    "privilege": "read-basic-app",
    "sk": "role:basic",
  },
]
`;

exports[`Users Table Integration Tests Scan with multiple filters, should return 1 record 1`] = `
[
  {
    "address": "456 Elm St",
    "age": 25,
    "favCar": "Ford",
    "favColor": "red",
    "favStar": "Sirius",
    "firstName": "suresh",
    "lastName": "kumar",
    "phone": "123-456-7890",
    "pk": "suresh@example.com",
    "sk": "user",
  },
]
`;
